k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: msme
  labels:
    app.kubernetes.io/part-of: msme-marketplace
